--- a/src/resources/main.fxml
+++ b/src/resources/main.fxml
@@ -1,4 +1,4 @@
-<?xml version ="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -8,24 +8,31 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
+
+<?import edu.cnm.deepdive.rps.view.TerrainView?>
 <GridPane
   xmlns="http://javafx.com/javafx"
   xmlns:fx="http://javafx.com/fxml"
   fx:controller="edu.cnm.deepdive.rps.controller.Controller"
   stylesheets="@styles.css">
+
   <columnConstraints>
-    <ColumnConstraints percentWidth="33.3"/>
-    <ColumnConstraints percentWidth="33.3"/>
+    <ColumnConstraints
+      percentWidth="33.3"/>
+    <ColumnConstraints
+      percentWidth="33.4"/>
   </columnConstraints>
+
   <CheckBox
-    fx:id="fitToScreen"
+    fx:id="fitCheckbox"
     text="%fit_to_container"
     selected="false"
-    GridPane.columnIndex="0"
     GridPane.rowIndex="0"
+    GridPane.columnIndex="0"
     GridPane.valignment="BASELINE"
     GridPane.halignment="LEFT"
     onAction="#fitView"/>
+
   <Text
     fx:id="iterationsLabel"
     GridPane.rowIndex="0"
@@ -33,15 +40,20 @@
     GridPane.valignment="BASELINE"
     GridPane.halignment="RIGHT"
     text="%iterations_text"/>
+
   <ScrollPane
     fx:id="viewScroller"
-    GridPane.columnIndex="0"
     GridPane.rowIndex="1"
+    GridPane.columnIndex="0"
     GridPane.columnSpan="3"
     GridPane.halignment="LEFT"
     GridPane.valignment="TOP">
 
-    <!--TODO Specify TerrainView-->
+    <TerrainView
+      fx:id="terrainView"
+      width="1200"
+      height="1200"/>
+
   </ScrollPane>
 
   <Slider
@@ -51,6 +63,7 @@
     majorTickUnit="1"
     minorTickCount="0"
     snapToTicks="true"
+    showTickMarks="true"
     showTickLabels="false"
     blockIncrement="1"
     GridPane.rowIndex="3"
@@ -66,12 +79,12 @@
     GridPane.rowIndex="2"
     GridPane.columnIndex="0"
     GridPane.halignment="CENTER"
-    GridPane.valignment="BOTTOM"/>
+    GridPane.valignment="BOTTOM" />
 
   <Slider
     fx:id="mixingSlider"
     min="0"
-    max="100000"
+    max="10"
     majorTickUnit="1"
     minorTickCount="0"
     snapToTicks="true"
@@ -81,8 +94,8 @@
     value="0"
     GridPane.rowIndex="3"
     GridPane.columnIndex="1"
-    GridPane.valignment="TOP"
-    GridPane.halignment="CENTER"/>
+    GridPane.halignment="CENTER"
+    GridPane.valignment="TOP"/>
 
   <Label
     text="%mixing_slider_text"
